package spa;

message Account
{
    optional string acc = 1;
    optional string pwd = 2;
}

// SPA 凭证
message SPAVoucher
{
    optional Account account = 1;
    optional string ip = 2;
    optional string address = 3;
    optional uint32 timestamp = 4;
    optional bool is_valid = 5[default=false];
}

// SPA数据包
// 1 加密的SPA凭证; 2 SPA凭证摘要
message SPAPacket
{
    optional bytes rsa_data = 1;
    optional bytes md5_data = 2;
}

message SPATicket
{
    optional bytes ticket = 1;
}
